--- a/index.html
+++ b/index.html
@@ -1,7 +1,64 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style> 
+  body { 
+    font-family: "Times New Roman", Times, serif;
+    background-color: #112311;
+    color: whitesmoke;
+    padding: 4rem;
+    font-size: 1.2rem;
+    line-height: 1.75rem;}
+
+a:link {
+  color: rgb(192, 255, 199);
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: rgb(192, 216, 255);
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
+
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>Hi, my name is Liam Martin. </h1>
+  <h2>I am an aspiring GIS Developer and I have a lot to learn. I will use this site to display the GIS products that I build.</h2>
+
+<div id='page1'>
+      <h3>Professional experience:</h3>
+      <ul>
+        <li>2023 - Present: Geospatial Data Analyst - Xentity Corporation</li>
+        <li>2020 - 2023: Geospatial Analyst - Red Castle Resources</li>
+        <li>2019 - 2020: GIS Technician - Tasman Geosciences</li>
+      </ul> 
+
+<div id='page2'>
+    <h3>Education:</h3>
+      <ul>
+        <li>2016 - 2018: Master of Arts, Geography: University of Minnesota</li>
+        <li>2012 - 2016: Bachelor of Arts, Environmental Studies: Regis University</li>
+      </ul>
+
+<div id='page3'>
+  <h3>Web Maps:</h3>
+    <ul>
+      <li><a href="https://liammartin3.github.io/gh-pages-html-template/">Leaflet Resume</a></li>
+    </ul>
+      
+<div id='page4'>
+    <h3>Links:</h3>
+      <ul>
+        <li><a href='https://github.com/liammartin3'>GitHub</a></li>
+        <li><a href='https://www.linkedin.com/in/liamdecourseymartin/'>LinkedIn</a></li>
+      </ul>
+
 </body>
 </html>
