--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@ a:hover {
     <ul>
       <li><a href="https://liammartin3.github.io/gh-pages-html-template/">Leaflet Resume</a></li>
     </ul>
-      
+
 <div id='page4'>
+  <h3>Python:</h3>
+    <ul>  
+      <li><a href="https://nbviewer.org/github/LDMRTN/notebooks/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
+      <li><a href="https://nbviewer.org/github/LDMRTN/notebooks/blob/main/Wind.ipynb">Geopandas Exploration</a>
+    </ul>
+
+      
+<div id='page5'>
     <h3>Links:</h3>
       <ul>
         <li><a href='https://github.com/liammartin3'>GitHub</a></li>
