--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@ a:hover {
   <h3>Python:</h3>
     <ul>  
       <li><a href="https://nbviewer.org/github/LDMRTN/notebooks/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
+      <li><a href="https://nbviewer.org/github/LDMRTN/notebooks/blob/main/Inserting%20and%20querying%20data%20in%20Postgres%20via%20GeoPandas.ipynb">Inserting and querying data in Postgres via GeoPandas</a></li>
+      <li><a href="https://nbviewer.org/github/LDMRTN/notebooks/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
     </ul>
-
-      
+ 
 <div id='page5'>
     <h3>Links:</h3>
       <ul>
