--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style> 
   body { 
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Mulish', sans-serif;;
     background-color: #112311;
     color: whitesmoke;
     padding: 4rem;
@@ -35,7 +35,7 @@ a:hover {
 <div id='page1'>
       <h3>Professional experience:</h3>
       <ul>
-        <li>2023 - Present: Geospatial Data Analyst - Xentity Corporation</li>
+        <li>2023 - Present: Geospatial / Metadata Analyst - Xentity Corporation</li>
         <li>2020 - 2023: Geospatial Analyst - Red Castle Resources</li>
         <li>2019 - 2020: GIS Technician - Tasman Geosciences</li>
       </ul> 
