--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ a:hover {
 
 </head>
 <body>
-  <h1>Hi, my name is Liam Martin. </h1>
+  <h1>Hi, my name is Liam Martin.. </h1>
   <h2>I am an aspiring GIS Developer and I have a lot to learn. I will use this site to display the GIS products that I build.</h2>
 
 <div id='page1'>
