--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ a:hover {
 <div id='page4'>
   <h3>Python:</h3>
     <ul>  
-      <li><a href="https://nbviewer.org/github/LDMRTN/notebooks/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
+      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
       <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Postgres_GeoPandas.ipynb">Inserting and querying data in Postgres via GeoPandas</a></li>
-      <li><a href="https://nbviewer.org/github/LDMRTN/notebooks/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
+      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
     </ul>
  
 <div id='page5'>
