--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a:hover {
 <div id='page1'>
       <h3>Professional experience:</h3>
       <ul>
-        <li>2023 - Present: Geospatial / Metadata Analyst - Xentity Corporation</li>
+        <li>2023 - Present: Geospatial Data / Metadata Analyst - Xentity Corporation</li>
         <li>2020 - 2023: Geospatial Analyst - Red Castle Resources</li>
         <li>2019 - 2020: GIS Technician - Tasman Geosciences</li>
       </ul> 
