--- a/index.html
+++ b/index.html
@@ -48,12 +48,6 @@ a:hover {
       </ul>
 
 <div id='page3'>
-  <h3>Web Maps:</h3>
-    <ul>
-      <li><a href="https://liammartin3.github.io/gh-pages-html-template/">Leaflet Resume</a></li>
-    </ul>
-
-<div id='page4'>
   <h3>Python:</h3>
     <ul>  
       <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
@@ -61,12 +55,18 @@ a:hover {
       <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
     </ul>
  
-<div id='page5'>
+<div id='page4'>
     <h3>Links:</h3>
       <ul>
         <li><a href='https://github.com/liammartin3'>GitHub</a></li>
         <li><a href='https://www.linkedin.com/in/liamdecourseymartin/'>LinkedIn</a></li>
       </ul>
+
+<div id='page5'>
+        <h3>Web Map:</h3>
+          <ul>
+            <object type="text/html" data="https://liammartin3.github.io/gh-pages-html-template" width=1200" height="600"></object>
+          </ul>
 
 </body>
 </html>
