--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@ a:hover {
   <h2>I am an aspiring GIS Developer and I have a lot to learn. I will use this site to display the GIS products that I build.</h2>
 
 <div id='page1'>
+  <h3>Web Maps</h3>
+    <ul>
+      <li><a href='https://liammartin3.github.io/NPS_leaflet/'>National Park Service Boundary Map</a></li>
+    </ul>
+
+<div id='page2'>
       <h3>Professional experience:</h3>
       <ul>
         <li>2023 - Present: Geospatial Data / Metadata Analyst - Xentity Corporation</li>
@@ -40,14 +46,14 @@ a:hover {
         <li>2019 - 2020: GIS Technician - Tasman Geosciences</li>
       </ul> 
 
-<div id='page2'>
+<div id='page3'>
     <h3>Education:</h3>
       <ul>
         <li>2016 - 2018: Master of Arts, Geography: University of Minnesota</li>
         <li>2012 - 2016: Bachelor of Arts, Environmental Studies: Regis University</li>
       </ul>
 
-<div id='page3'>
+<div id='page4'>
   <h3>Python:</h3>
     <ul>  
       <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
@@ -55,15 +61,15 @@ a:hover {
       <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
     </ul>
  
-<div id='page4'>
+<div id='page5'>
     <h3>Links:</h3>
       <ul>
         <li><a href='https://github.com/liammartin3'>GitHub</a></li>
         <li><a href='https://www.linkedin.com/in/liamdecourseymartin/'>LinkedIn</a></li>
       </ul>
 
-<div id='page5'>
-        <h3>Web Map:</h3>
+<div id='page6'>
+        <h3>Resume Web Map:</h3>
           <ul>
             <object type="text/html" data="https://liammartin3.github.io/gh-pages-html-template" width=1200" height="600"></object>
           </ul>
