--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:hover {
   <h2>I am an aspiring GIS Developer and I have a lot to learn. I will use this site to display the GIS products that I build.</h2>
 
 <div id='page1'>
-  <h3>Web Maps</h3>
+  <h3>Web Maps:</h3>
     <ul>
       <li><a href='https://liammartin3.github.io/NPS_leaflet/'>National Park Service Boundary Map</a></li>
     </ul>
