updated map link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ a:hover {
 <div id='page6'>
         <h3>Resume Web Map:</h3>
           <ul>
-            <object type="text/html" data="https://liammartin3.github.io/gh-pages-html-template" width=1200" height="600"></object>
+            <object type="text/html" data="https://liammartin3.github.io/map-resume" width=1200" height="600"></object>
           </ul>
 
 </body>
