--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@ a:hover {
 </head>
 <body>
   <h1>Hi, my name is Liam Martin. </h1>
-  <h2>I am an aspiring GIS Developer and I have a lot to learn. I will use this site to display the GIS products that I build.</h2>
+  <h2>I am a GIS Developer. I will use this site to display the GIS products that I build.</h2>
 
 <div id='page1'>
   <h3>Web Maps:</h3>
     <ul>
-      <li><a href='https://liammartin3.github.io/NPS_leaflet/'>National Park Service Boundary Map</a></li>
+      <li><a href='https://liammartin3.github.io/nps-leaflet/'>National Park Service Boundary Map</a></li>
     </ul>
 
 <div id='page2'>
       <h3>Professional experience:</h3>
       <ul>
-        <li>2023 - Present: Geospatial Data / Metadata Analyst - Xentity Corporation</li>
+        <li>2023 - Present: GIS, Backend Developer - Xentity Corporation</li>
         <li>2020 - 2023: Geospatial Analyst - Red Castle Resources</li>
         <li>2019 - 2020: GIS Technician - Tasman Geosciences</li>
       </ul> 
@@ -71,7 +71,7 @@ a:hover {
 <div id='page6'>
         <h3>Resume Web Map:</h3>
           <ul>
-            <object type="text/html" data="https://liammartin3.github.io/map-resume" width=1200" height="600"></object>
+            <object type="text/html" data="https://liammartin3.github.io/map-resume" width="1200" height="600"></object>
           </ul>
 
 </body>
