--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ a:hover {
   <div id='page1'>
         <h3>Resume Web Map:</h3>
           <ul>
-            <object type="text/html" data="https://liammartin3.github.io/map-resume" width="1200" height="600"></object>
+            <object type="text/html" data="https://liammartin3.github.io/map-resume" width="1000" height="500"></object>
           </ul>
 
 <div id='page2'>
   <h3>Sample Products:</h3>
       <ul>
       <li><a href='https://radiantearth.github.io/stac-browser/#/external/stac-data.s3.us-east-2.amazonaws.com/stac-catalog/catalog.json?.language=en'>
-        Sample STAC Catalog created using pystac, rasterio, and shapely</a></li>
+        Sample STAC Catalog created using pystac, rasterio, shapely, and COGS</a></li>
     </ul>
     <ul>
       <li><a href='https://liammartin3.github.io/nps-leaflet/'>National Park Service Boundary Map</a></li>
