change resume map to link

--- a/index.html
+++ b/index.html
@@ -32,23 +32,20 @@ a:hover {
   <h1>Hi, my name is Liam Martin. </h1>
   <h2>I am a GIS Developer. I will use this site to display the GIS products that I build.</h2>
 
-  <div id='page1'>
-        <h3>Resume Web Map:</h3>
-          <ul>
-            <object type="text/html" data="https://liammartin3.github.io/map-resume" width="1000" height="500"></object>
-          </ul>
-
-<div id='page2'>
+<div id='page1'>
   <h3>Sample Products:</h3>
       <ul>
       <li><a href='https://radiantearth.github.io/stac-browser/#/external/stac-data.s3.us-east-2.amazonaws.com/stac-catalog/catalog.json?.language=en'>
         Sample STAC Catalog created using pystac, rasterio, shapely, and COGS</a></li>
     </ul>
+      <ul>
+      <li><a href='https://liammartin3.github.io/map-resume'>Resume Web Map</a></li>
+    </ul>
     <ul>
       <li><a href='https://liammartin3.github.io/nps-leaflet/'>National Park Service Boundary Map</a></li>
     </ul>
 
-<div id='page3'>
+<div id='page2'>
       <h3>Professional experience:</h3>
       <ul>
         <li>2023 - Present: GIS Developer - Xentity Corporation</li>
@@ -56,14 +53,14 @@ a:hover {
         <li>2019 - 2020: GIS Technician - Tasman Geosciences</li>
       </ul> 
 
-<div id='page4'>
+<div id='page3'>
     <h3>Education:</h3>
       <ul>
         <li>2016 - 2018: Master of Arts, Geography: University of Minnesota</li>
         <li>2012 - 2016: Bachelor of Arts, Environmental Studies: Regis University</li>
       </ul>
 
-<div id='page5'>
+<div id='page4'>
   <h3>Python:</h3>
     <ul>  
       <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
@@ -71,7 +68,7 @@ a:hover {
       <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
     </ul>
  
-<div id='page6'>
+<div id='page5'>
     <h3>Links:</h3>
       <ul>
         <li><a href='https://github.com/liammartin3'>GitHub</a></li>
