--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ a:visited {
   text-decoration: none;
 }
 a:hover {
-  color: red;
+  color: rgb(255, 230, 0);
   background-color: transparent;
   text-decoration: underline;
 }
