change header size

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ a:hover {
   <h2>I am a GIS Developer. I will use this site to display the GIS products that I build.</h2>
 
 <div id='page1'>
-  <h3>Sample Products:</h3>
+  <h4>Sample Products:</h4>
       <ul>
       <li><a href='https://radiantearth.github.io/stac-browser/#/external/stac-data.s3.us-east-2.amazonaws.com/stac-catalog/catalog.json?.language=en'>
-        Sample STAC Catalog created using pystac, rasterio, shapely, and COGS</a></li>
+        Sample STAC Catalog created using pystac, rasterio, shapely, COGS, and S3</a></li>
     </ul>
       <ul>
       <li><a href='https://liammartin3.github.io/map-resume'>Resume Web Map</a></li>
@@ -46,30 +46,30 @@ a:hover {
     </ul>
 
 <div id='page2'>
-      <h3>Professional experience:</h3>
+  <h4>Python:</h4>
+    <ul>  
+      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
+      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Postgres_GeoPandas.ipynb">Inserting and querying data in Postgres via GeoPandas</a></li>
+      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
+    </ul>
+
+<div id='page3'>
+      <h4>Professional experience:</h4>
       <ul>
         <li>2023 - Present: GIS Developer - Xentity Corporation</li>
         <li>2020 - 2023: Geospatial Analyst - Red Castle Resources</li>
         <li>2019 - 2020: GIS Technician - Tasman Geosciences</li>
       </ul> 
 
-<div id='page3'>
-    <h3>Education:</h3>
+<div id='page4'>
+    <h4>Education:</h4>
       <ul>
         <li>2016 - 2018: Master of Arts, Geography: University of Minnesota</li>
         <li>2012 - 2016: Bachelor of Arts, Environmental Studies: Regis University</li>
       </ul>
-
-<div id='page4'>
-  <h3>Python:</h3>
-    <ul>  
-      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/NullFunction.ipynb">Populate Null Values with Median</a></li>
-      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Postgres_GeoPandas.ipynb">Inserting and querying data in Postgres via GeoPandas</a></li>
-      <li><a href="https://nbviewer.org/github/liammartin3/liammartin3.github.io/blob/main/Wind.ipynb">Geopandas Exploration</a></li>
-    </ul>
  
 <div id='page5'>
-    <h3>Links:</h3>
+    <h4>Links:</h4>
       <ul>
         <li><a href='https://github.com/liammartin3'>GitHub</a></li>
         <li><a href='https://www.linkedin.com/in/liamdecourseymartin/'>LinkedIn</a></li>
