--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:hover {
         Sample STAC Catalog created using pystac, rasterio, shapely, COGS, and S3</a></li>
     </ul>
       <ul>
-      <li><a href='https://liammartin3.github.io/map-resume'>Resume Web Map</a></li>
+      <li><a href='https://liammartin3.github.io/map-resume'>Resume Web Map built with Leaflet</a></li>
     </ul>
     <ul>
       <li><a href='https://liammartin3.github.io/nps-leaflet/'>National Park Service Boundary Map</a></li>
