update tagline description

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ a:hover {
 </head>
 <body>
   <h1>Hi, my name is Liam Martin. </h1>
-  <h2>I am a GIS Developer. I will use this site to display the GIS products that I build.</h2>
+  <h2>I am a Geospatial Data Engineer / Developer who specializes in all things metadata. I will use this site to share the GIS products that I build.</h2>
 
 <div id='page1'>
   <h4>Sample Products:</h4>
