--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ a:hover {
   <h4>Sample Products:</h4>
       <ul>
       <li><a href='https://radiantearth.github.io/stac-browser/#/external/stac-data.s3.us-east-2.amazonaws.com/stac-catalog/catalog.json?.language=en'>
-        Sample STAC Catalog created using pystac, rasterio, shapely, COGS, and S3</a></li>
+        Sample STAC Catalog created using pystac, rasterio, shapely, and S3</a></li>
     </ul>
       <ul>
       <li><a href='https://liammartin3.github.io/map-resume'>Resume Web Map built with Leaflet</a></li>
