update nps title

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a:hover {
       <li><a href='https://liammartin3.github.io/map-resume'>Resume Web Map built with Leaflet</a></li>
     </ul>
     <ul>
-      <li><a href='https://liammartin3.github.io/nps-leaflet/'>National Park Service Boundary Map</a></li>
+      <li><a href='https://liammartin3.github.io/nps-leaflet/'>National Parks I Have Visited</a></li>
     </ul>
 
 <div id='page2'>
